# IUH_AI

./: .env.sample  docker-compose.yml
CLIENT/: .dockerignore  .env.sample  Dockerfile  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
CLIENT/src/: App.tsx  main.tsx
CLIENT/src/components/: ChatFooter.tsx  ChatHeader.tsx  ChatMain.tsx  LoadingScreen.tsx  MessageList.tsx  PrivateRoute.tsx  ProfileDialog.tsx  StepIndicator.tsx  WelcomeMessage.tsx
CLIENT/src/components/ui/: input.tsx
CLIENT/src/page/: About.tsx  Chat.tsx  Login.tsx  Register.tsx
CLIENT/src/types/: index.ts
CLIENT/src/utils/: chatUtils.ts  context.tsx  login.ts  useAuth.ts
SERVER/: .dockerignore  .env.sample  .gitignore  Dockerfile  config.py  entities.py  graph.py  logger.py  main.py  models.py  nodes.py  prompts.py  pyproject.toml  state.py  stores.py  tools.py
